Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)

More information on each of the fixes can be found in the project
development home at https://github.com/projectestac/agora_nodes

Changes 19.09.25
---------------------------------------------------------------------------------------
- WordPress Social Login: Fixed login to WordPress via Moodle
- TOC+: Fixed compatibility with WordPress 5.1
- H5P: Upgraded to version 1.14.1
- Added script to delete duplicated records in email subscribers tables
- Added script to create missing tables in buddypress subscriptions


Changes 19.08.29
---------------------------------------------------------------------------------------
- Removed loading of PWA code to fix cache issues


Changes 19.07.24
---------------------------------------------------------------------------------------
- xtec-booking: Added cron to remove old bookings
- phpinfo: Fixed access restriction to superadmins
- email-subscribers: Hidden technical information to users
- xtec lib: Added action to replace http by https in reactor_options
- Fixed service worker


Changes 19.04.15
---------------------------------------------------------------------------------------
- Upgrade Wordpress to version 5.1.1
- Updates translation binaries for version 5.1.1
- Remove core themes
- Give PWA functionality
- Adjust custom menu for the mobile version
- Add function strip_shortcode_from_excerpt
- Add comment
- Let user admin delete users
- Add Educació logo and rename Ensenyament logo
- Update bbpress
- Update buddypress-doc
- Update buddypress-activity-plus
- Update email-subscribers
- Update import-users-from-csv-with-meta
- Update invite-anyone
- Update polylang
- Update tabs-responsive
- Update tinymce-advanced
- Update wp-recaptcha
- Add dop plugin
- Add disable Gutenberg plugin


Changes 18.11.05
---------------------------------------------------------------------------------------
- Upgrade H5P
- Fix the mail format of Buddypress