@@ -3,6 +3,11 @@ Release notes for Agora-Nodes (http://agora.xtec.cat/nodes)
 More information on each of the fixes can be found in the project
 development home at https://github.com/projectestac/agora_nodes
 
+Changes in progress
+---------------------------------------------------------------------------------------
+- Email_subscribers: Remove access to email_subscribers' menu if user role is not administrator or editor
+
+
 Changes 19.09.25
 ---------------------------------------------------------------------------------------
 - WordPress Social Login: Fixed login to WordPress via Moodle
